.metadata/.plugins/org.eclipse.cdt.ui/BlackCat_NeuralNetworks.build.log
16:40:52 **** Incremental Build of configuration Release for project BlackCat_NeuralNetworks ****
make all 
Building file: ../UnitTests/MNIST_test.cu
Invoking: NVCC Compiler
/usr/local/cuda-9.1/bin/nvcc -I/home/joseph/BlackCat_Libraries/BlackCat_Tensors3.2/BlackCat_Tensors -I/home/joseph/BlackCat_Libraries/BlackCat_Tensors3.2/BlackCat_Tensors_Functions/Functions -O3 -gencode arch=compute_52,code=sm_52  -odir "UnitTests" -M -o "UnitTests/MNIST_test.d" "../UnitTests/MNIST_test.cu"
/usr/local/cuda-9.1/bin/nvcc -I/home/joseph/BlackCat_Libraries/BlackCat_Tensors3.2/BlackCat_Tensors -I/home/joseph/BlackCat_Libraries/BlackCat_Tensors3.2/BlackCat_Tensors_Functions/Functions -O3 --compile --relocatable-device-code=true -gencode arch=compute_52,code=compute_52 -gencode arch=compute_52,code=sm_52  -x cu -o  "UnitTests/MNIST_test.o" "../UnitTests/MNIST_test.cu"
In file included from /tmp/tmpxft_00003ced_00000000-5_MNIST_test.cudafe1.stub.c:6:0,
                 from tmpxft_00003ced_00000000-5_MNIST_test.cudafe1.stub.c:1:
/tmp/tmpxft_00003ced_00000000-5_MNIST_test.cudafe1.stub.c: In function ‘void __device_stub__ZN2BC8gpu_impl4copyIPfNS_17binary_expressionIfNS_6assignES2_NS_16unary_expressionIfNS_12NN_Functions7SigmoidENS3_IfNS_3addENS_28binary_expression_dotproductIfS2_NS3_IfS4_S2_S2_EENS_3GPUEEES2_EEEEEEEEvT_T0_i(_ZN2BC7fp_typeE*, _ZN2BC10TensorBaseINS_17binary_expressionIfNS_6assignEPfNS_16unary_expressionIfNS_12NN_Functions7SigmoidENS1_IfNS_3addENS_28binary_expression_dotproductIfS3_NS1_IfS2_S3_S3_EENS_3GPUEEES3_EEEEEENS_6VectorISE_SA_EESA_vE12functor_typeE&, int)’:
/tmp/tmpxft_00003ced_00000000-5_MNIST_test.cudafe1.stub.c:74:35: error: invalid application of ‘sizeof’ to incomplete type ‘_ZN2BC10TensorBaseINS_17binary_expressionIfNS_6assignEPfNS_16unary_expressionIfNS_12NN_Functions7SigmoidENS1_IfNS_3addENS_28binary_expression_dotproductIfS3_NS1_IfS2_S3_S3_EENS_3GPUEEES3_EEEEEENS_6VectorISE_SA_EESA_vE12functor_typeE {aka _ZN2BC17binary_expressionIfNS_6assignEPfNS_16unary_expressionIfNS_12NN_Functions7SigmoidENS0_IfNS_3addENS_28binary_expression_dotproductIfS2_NS0_IfS1_S2_S2_EENS_3GPUEEES2_EEEEEE}’
 static void __device_stub__ZN2BC8gpu_impl4copyIPfNS_17binary_expressionIfNS_3subES2_NS_28binary_expression_dotproductIfS2_NS_26unary_expression_transposeIfNS_6VectorIfNS_3GPUEEEEES8_EEEEEEvT_T0_i(_ZN2BC7fp_typeE *__par0, _ZN2BC22Tensor_Operations_implINS_6MatrixINS_17binary_expressionIfNS_3subEPfNS_28binary_expression_dotproductIfS4_NS_26unary_expression_transposeIfNS_6VectorIfNS_3GPUEEEEES8_EEEES8_EENS_7_TRAITSIfSC_NS1_IfS8_EES8_EEE12functor_typeE&__par1, int __par2){__cudaSetupArgSimple(__par0, 0UL);__cudaSetupArg(__par1, 8UL);__cudaSetupArgSimple(__par2, 104UL);__cudaLaunch(((char *)((void ( *)(_ZN2BC7fp_typeE *, _ZN2BC22Tensor_Operations_implINS_6MatrixINS_17binary_expressionIfNS_3subEPfNS_28binary_expression_dotproductIfS4_NS_26unary_expression_transposeIfNS_6VectorIfNS_3GPUEEEEES8_EEEES8_EENS_7_TRAITSIfSC_NS1_IfS8_EES8_EEE12functor_typeE, int))BC::gpu_impl::copy<float *,  ::BC::binary_expression<float,  ::BC::sub, float *,  ::BC::binary_expression_dotproduct<float, float *,  ::BC::unary_expression_transpose<float,  ::BC::Vector<float,  ::BC::GPU> > ,  ::BC::GPU> > > )));}namespace BC{
                                   ^
/tmp/tmpxft_00003ced_00000000-5_MNIST_test.cudafe1.stub.c: In function ‘void __device_stub__ZN2BC8gpu_impl4copyIPfNS_17binary_expressionIfNS_6assignES2_NS3_IfNS_3mulENS_28binary_expression_dotproductIfNS_26unary_expression_transposeIfNS_6MatrixIfNS_3GPUEEEEES2_S9_EENS_16unary_expressionIfNS_12NN_Functions24CachedSigmoidDerivAssignES2_EEEEEEEEvT_T0_i(_ZN2BC7fp_typeE*, _ZN2BC10TensorBaseINS_17binary_expressionIfNS_6assignEPfNS1_IfNS_3mulENS_28binary_expression_dotproductIfNS_26unary_expression_transposeIfNS_6MatrixIfNS_3GPUEEEEES3_S8_EENS_16unary_expressionIfNS_12NN_Functions24CachedSigmoidDerivAssignES3_EEEEEENS_6VectorISH_S8_EES8_vE12functor_typeE&, int)’:
/tmp/tmpxft_00003ced_00000000-5_MNIST_test.cudafe1.stub.c:87:13: error: invalid application of ‘sizeof’ to incomplete type ‘_ZN2BC10TensorBaseINS_17binary_expressionIfNS_6assignEPfNS1_IfNS_3mulENS_28binary_expression_dotproductIfNS_26unary_expression_transposeIfNS_6MatrixIfNS_3GPUEEEEES3_S8_EENS_16unary_expressionIfNS_12NN_Functions24CachedSigmoidDerivAssignES3_EEEEEENS_6VectorISH_S8_EES8_vE12functor_typeE {aka _ZN2BC17binary_expressionIfNS_6assignEPfNS0_IfNS_3mulENS_28binary_expression_dotproductIfNS_26unary_expression_transposeIfNS_6MatrixIfNS_3GPUEEEEES2_S7_EENS_16unary_expressionIfNS_12NN_Functions24CachedSigmoidDerivAssignES2_EEEEEE}’
 static void __sti____cudaRegisterAll(void){____cudaRegisterLinkedBinary(__nv_cudaEntityRegisterCallback);}
             ^
UnitTests/subdir.mk:24: recipe for target 'UnitTests/MNIST_test.o' failed
make: *** [UnitTests/MNIST_test.o] Error 1

16:40:55 Build Finished (took 3s.524ms)

